Add working entry point for compiler